# napari-matous

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_matous/: __init__.py  gamer.py  meshfilter.py  napari.yaml  segment.py  stardistsegment.py  tiff2mesh.py
src/napari_matous/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
