[metadata]
name = napari-matous
version = 0.0.2
description = My first plugin as a napari developer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/m-elphick/napari-matous
author = Matous Elphick
author_email = matous.elphick@crick.ac.uk
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/m-elphick/napari-matous/issues
    Documentation = https://github.com/m-elphick/napari-matous#README.md
    Source Code = https://github.com/m-elphick/napari-matous
    User Support = https://github.com/m-elphick/napari-matous/issues

[options]
packages = find:
install_requires =
    napari
    numpy
    magicgui
    qtpy
    tox
    tensorflow; sys_platform != 'darwin' or platform_machine != 'arm64'
    tensorflow-macos; sys_platform == 'darwin' and platform_machine == 'arm64'
    tensorflow-metal; sys_platform == 'darwin' and platform_machine == 'arm64'
    stardist
    open3d
    scipy


python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-matous = napari_matous:napari.yaml

[options.package_data]
* = *.yaml
